--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,10 @@ body {
   letter-spacing: 0.05em;
   transition: all 0.1s;
   box-shadow: 4px 4px 0px 0px #000000;
+  min-height: 40px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn-brutal:hover {
@@ -64,6 +68,10 @@ body {
   letter-spacing: 0.05em;
   transition: all 0.1s;
   box-shadow: 4px 4px 0px 0px #000000;
+  min-height: 40px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn-brutal-primary:hover {
@@ -86,6 +94,10 @@ body {
   letter-spacing: 0.05em;
   transition: all 0.1s;
   box-shadow: 4px 4px 0px 0px #000000;
+  min-height: 40px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn-brutal-success:hover {
@@ -107,8 +119,8 @@ body {
 
 /* Icon Button */
 .icon-btn-brutal {
-  width: 2.5rem;
-  height: 2.5rem;
+  min-width: 44px;
+  min-height: 44px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -116,6 +128,7 @@ body {
   background: white;
   transition: all 0.1s;
   box-shadow: 2px 2px 0px 0px #000000;
+  font-size: 1.25rem;
 }
 
 .icon-btn-brutal:hover {
@@ -139,7 +152,7 @@ body {
 /* Range Input Neo-Brutal */
 input[type="range"].range-brutal {
   width: 100%;
-  height: 0.5rem;
+  height: 0.75rem;
   background: white;
   border: 2px solid black;
   appearance: none;
@@ -148,8 +161,8 @@ input[type="range"].range-brutal {
 
 input[type="range"].range-brutal::-webkit-slider-thumb {
   appearance: none;
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 2rem;
+  height: 2rem;
   background: #6366F1;
   border: 2px solid black;
   cursor: grab;
@@ -160,8 +173,8 @@ input[type="range"].range-brutal::-webkit-slider-thumb:active {
 }
 
 input[type="range"].range-brutal::-moz-range-thumb {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 2rem;
+  height: 2rem;
   background: #6366F1;
   border: 2px solid black;
   cursor: grab;
@@ -169,6 +182,23 @@ input[type="range"].range-brutal::-moz-range-thumb {
 
 input[type="range"].range-brutal::-moz-range-thumb:active {
   cursor: grabbing;
+}
+
+/* Mobile: larger touch targets */
+@media (max-width: 640px) {
+  input[type="range"].range-brutal {
+    height: 1rem;
+  }
+  
+  input[type="range"].range-brutal::-webkit-slider-thumb {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+  
+  input[type="range"].range-brutal::-moz-range-thumb {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
 }
 
 /* No select */
